Обновлена либа stihirus-reader, добавлены новые эндпоинты и новые поля к старым эндпоинтам
